[package]
name = "elden-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ParamEditor = []
FmgEditor = []
ActionButtonParam = []
AiSoundParam = []
AssetEnvironmentGeometryParam = []
AssetMaterialSfxParam = []
AssetModelSfxParam = []
AtkParam_Npc = []
AtkParam_Pc = []
AttackElementCorrectParam = []
AutoCreateEnvSoundParam = []
BaseChrSelectMenuParam = []
BehaviorParam = []
BehaviorParam_PC = []
BonfireWarpParam = []
BonfireWarpSubCategoryParam = []
BonfireWarpTabParam = []
BuddyParam = []
BuddyStoneParam = []
BudgetParam = []
Bullet = []
BulletCreateLimitParam = []
CalcCorrectGraph = []
Ceremony = []
CharaInitParam = []
CharMakeMenuListItemParam = []
CharMakeMenuTopParam = []
ChrActivateConditionParam = []
ChrModelParam = []
ClearCountCorrectParam = []
CoolTimeParam = []
CutsceneGparamTimeParam = []
CutsceneGparamWeatherParam = []
CutsceneMapIdParam = []
CutSceneTextureLoadParam = []
CutsceneTimezoneConvertParam = []
CutsceneWeatherOverrideGparamConvertParam = []
DecalParam = []
DirectionCameraParam = []
EnemyCommonParam = []
EnvObjLotParam = []
EquipMtrlSetParam = []
EquipParamAccessory = []
EquipParamCustomWeapon = []
EquipParamGem = []
EquipParamGoods = []
EquipParamProtector = []
EquipParamWeapon = []
FaceParam = []
FaceRangeParam = []
FeTextEffectParam = []
FinalDamageRateParam = []
FootSfxParam = []
GameAreaParam = []
GameSystemCommonParam = []
GestureParam = []
GparamRefSettings = []
GraphicsCommonParam = []
GraphicsConfig = []
GrassLodRangeParam = []
GrassTypeParam = []
GrassTypeParam_Lv1 = []
GrassTypeParam_Lv2 = []
HitEffectSeParam = []
HitEffectSfxConceptParam = []
HitEffectSfxParam = []
HitMtrlParam = []
HPEstusFlaskRecoveryParam = []
ItemLotParam_enemy = []
ItemLotParam_map = []
KeyAssignMenuItemParam = []
KeyAssignParam_TypeA = []
KeyAssignParam_TypeB = []
KeyAssignParam_TypeC = []
KnockBackParam = []
KnowledgeLoadScreenItemParam = []
LegacyDistantViewPartsReplaceParam = []
LoadBalancerDrawDistScaleParam = []
LoadBalancerDrawDistScaleParam_ps4 = []
LoadBalancerDrawDistScaleParam_ps5 = []
LoadBalancerDrawDistScaleParam_xb1 = []
LoadBalancerDrawDistScaleParam_xb1x = []
LoadBalancerDrawDistScaleParam_xss = []
LoadBalancerDrawDistScaleParam_xsx = []
LoadBalancerNewDrawDistScaleParam_ps4 = []
LoadBalancerNewDrawDistScaleParam_ps5 = []
LoadBalancerNewDrawDistScaleParam_win64 = []
LoadBalancerNewDrawDistScaleParam_xb1 = []
LoadBalancerNewDrawDistScaleParam_xb1x = []
LoadBalancerNewDrawDistScaleParam_xss = []
LoadBalancerNewDrawDistScaleParam_xsx = []
LoadBalancerParam = []
LockCamParam = []
Magic = []
MapDefaultInfoParam = []
MapGdRegionDrawParam = []
MapGdRegionInfoParam = []
MapGridCreateHeightLimitInfoParam = []
MapMimicryEstablishmentParam = []
MapNameTexParam = []
MapPieceTexParam = []
MaterialExParam = []
MenuColorTableParam = []
MenuCommonParam = []
MenuOffscrRendParam = []
MenuPropertyLayoutParam = []
MenuPropertySpecParam = []
MenuValueTableParam = []
MimicryEstablishmentTexParam = []
MoveParam = []
MPEstusFlaskRecoveryParam = []
MultiHPEstusFlaskBonusParam = []
MultiMPEstusFlaskBonusParam = []
MultiPlayCorrectionParam = []
MultiSoulBonusRateParam = []
NetworkAreaParam = []
NetworkMsgParam = []
NetworkParam = []
NpcAiActionParam = []
NpcAiBehaviorProbability = []
NpcParam = []
NpcThinkParam = []
ObjActParam = []
PartsDrawParam = []
PhantomParam = []
PlayerCommonParam = []
PlayRegionParam = []
PostureControlParam_Gender = []
PostureControlParam_Pro = []
PostureControlParam_WepLeft = []
PostureControlParam_WepRight = []
RandomAppearParam = []
ReinforceParamProtector = []
ReinforceParamWeapon = []
ResistCorrectParam = []
RideParam = []
RoleParam = []
RollingObjLotParam = []
RuntimeBoneControlParam = []
SeActivationRangeParam = []
SeMaterialConvertParam = []
SfxBlockResShareParam = []
ShopLineupParam = []
ShopLineupParam_Recipe = []
SignPuddleParam = []
SoundAssetSoundObjEnableDistParam = []
SoundAutoEnvSoundGroupParam = []
SoundAutoReverbEvaluationDistParam = []
SoundAutoReverbSelectParam = []
SoundChrPhysicsSeParam = []
SoundCommonIngameParam = []
SoundCutsceneParam = []
SpeedtreeParam = []
SpEffectParam = []
SpEffectSetParam = []
SpEffectVfxParam = []
SwordArtsParam = []
TalkParam = []
ThrowDirectionSfxParam = []
ThrowParam = []
ToughnessParam = []
TutorialParam = []
WaypointParam = []
WeatherAssetCreateParam = []
WeatherAssetReplaceParam = []
WeatherLotParam = []
WeatherLotTexParam = []
WeatherParam = []
WepAbsorpPosParam = []
WetAspectParam = []
WhiteSignCoolTimeParam = []
WorldMapLegacyConvParam = []
WorldMapPieceParam = []
WorldMapPlaceNameParam = []
WorldMapPointParam = []
WwiseValueToStrParam_BgmBossChrIdConv = []
WwiseValueToStrParam_EnvPlaceType = []
WwiseValueToStrParam_Switch_AttackStrength = []
WwiseValueToStrParam_Switch_AttackType = []
WwiseValueToStrParam_Switch_DamageAmount = []
WwiseValueToStrParam_Switch_DeffensiveMaterial = []
WwiseValueToStrParam_Switch_GrassHitType = []
WwiseValueToStrParam_Switch_HitStop = []
WwiseValueToStrParam_Switch_OffensiveMaterial = []
WwiseValueToStrParam_Switch_PlayerEquipmentBottoms = []
WwiseValueToStrParam_Switch_PlayerEquipmentTops = []
WwiseValueToStrParam_Switch_PlayerShoes = []
WwiseValueToStrParam_Switch_PlayerVoiceType = []

[dependencies]
widestring = "1.0.2"
windows = {version="0.48.0", features=["Win32_System_Memory"]}
