[package]
name = "elden-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
widestring = "1.0.2"
windows = { version = "0.48.0", features = ["Win32_System_Memory", "Win32_System_LibraryLoader", "Win32_Foundation"] }
fisherman = { git = "https://github.com/Nordgaren/fisherman" }

[features]
FmgEditor = []
MsgRepositoryScan = []
ParamEditor = []
ParamRepositoryScan = []
ActionButtonParam = ["ACTIONBUTTON_PARAM_ST"]
AiSoundParam = ["AI_SOUND_PARAM_ST"]
AssetEnvironmentGeometryParam = ["ASSET_GEOMETORY_PARAM_ST"]
AssetMaterialSfxParam = ["ASSET_MATERIAL_SFX_PARAM_ST"]
AssetModelSfxParam = ["ASSET_MODEL_SFX_PARAM_ST"]
AtkParam_Npc = ["ATK_PARAM_ST"]
AtkParam_Pc = ["ATK_PARAM_ST"]
AttackElementCorrectParam = ["ATTACK_ELEMENT_CORRECT_PARAM_ST"]
AutoCreateEnvSoundParam = ["AUTO_CREATE_ENV_SOUND_PARAM_ST"]
BaseChrSelectMenuParam = ["BASECHR_SELECT_MENU_PARAM_ST"]
BehaviorParam = ["BEHAVIOR_PARAM_ST"]
BehaviorParam_PC = ["BEHAVIOR_PARAM_ST"]
BonfireWarpParam = ["BONFIRE_WARP_PARAM_ST"]
BonfireWarpSubCategoryParam = ["BONFIRE_WARP_SUB_CATEGORY_PARAM_ST"]
BonfireWarpTabParam = ["BONFIRE_WARP_TAB_PARAM_ST"]
BuddyParam = ["BUDDY_PARAM_ST"]
BuddyStoneParam = ["BUDDY_STONE_PARAM_ST"]
BudgetParam = ["BUDGET_PARAM_ST"]
Bullet = ["BULLET_PARAM_ST"]
BulletCreateLimitParam = ["BULLET_CREATE_LIMIT_PARAM_ST"]
CalcCorrectGraph = ["CACL_CORRECT_GRAPH_ST"]
Ceremony = ["CEREMONY_PARAM_ST"]
CharaInitParam = ["CHARACTER_INIT_PARAM"]
CharMakeMenuListItemParam = ["CHARMAKEMENU_LISTITEM_PARAM_ST"]
CharMakeMenuTopParam = ["CHARMAKEMENUTOP_PARAM_ST"]
ChrActivateConditionParam = ["CHR_ACTIVATE_CONDITION_PARAM_ST"]
ChrModelParam = ["CHR_MODEL_PARAM_ST"]
ClearCountCorrectParam = ["CLEAR_COUNT_CORRECT_PARAM_ST"]
CoolTimeParam = ["COOL_TIME_PARAM_ST"]
CutsceneGparamTimeParam = ["CUTSCENE_GPARAM_TIME_PARAM_ST"]
CutsceneGparamWeatherParam = ["CUTSCENE_GPARAM_WEATHER_PARAM_ST"]
CutsceneMapIdParam = ["CUTSCENE_MAP_ID_PARAM_ST"]
CutSceneTextureLoadParam = ["CUTSCENE_TEXTURE_LOAD_PARAM_ST"]
CutsceneTimezoneConvertParam = ["CUTSCENE_TIMEZONE_CONVERT_PARAM_ST"]
CutsceneWeatherOverrideGparamConvertParam = ["CUTSCENE_WEATHER_OVERRIDE_GPARAM_ID_CONVERT_PARAM_ST"]
DecalParam = ["DECAL_PARAM_ST"]
DirectionCameraParam = ["DIRECTION_CAMERA_PARAM_ST"]
EnemyCommonParam = ["ENEMY_COMMON_PARAM_ST"]
EnvObjLotParam = ["ENV_OBJ_LOT_PARAM_ST"]
EquipMtrlSetParam = ["EQUIP_MTRL_SET_PARAM_ST"]
EquipParamAccessory = ["EQUIP_PARAM_ACCESSORY_ST"]
EquipParamCustomWeapon = ["EQUIP_PARAM_CUSTOM_WEAPON_ST"]
EquipParamGem = ["EQUIP_PARAM_GEM_ST"]
EquipParamGoods = ["EQUIP_PARAM_GOODS_ST"]
EquipParamProtector = ["EQUIP_PARAM_PROTECTOR_ST"]
EquipParamWeapon = ["EQUIP_PARAM_WEAPON_ST"]
FaceParam = ["FACE_PARAM_ST"]
FaceRangeParam = ["FACE_RANGE_PARAM_ST"]
FeTextEffectParam = ["FE_TEXT_EFFECT_PARAM_ST"]
FinalDamageRateParam = ["FINAL_DAMAGE_RATE_PARAM_ST"]
FootSfxParam = ["FOOT_SFX_PARAM_ST"]
GameAreaParam = ["GAME_AREA_PARAM_ST"]
GameSystemCommonParam = ["GAME_SYSTEM_COMMON_PARAM_ST"]
GestureParam = ["GESTURE_PARAM_ST"]
GparamRefSettings = ["GPARAM_REF_SETTINGS_PARAM_ST"]
GraphicsCommonParam = ["GRAPHICS_COMMON_PARAM_ST"]
GraphicsConfig = ["CS_GRAPHICS_CONFIG_PARAM_ST"]
GrassLodRangeParam = ["GRASS_LOD_RANGE_PARAM_ST"]
GrassTypeParam = ["GRASS_TYPE_PARAM_ST"]
GrassTypeParam_Lv1 = ["GRASS_TYPE_PARAM_ST"]
GrassTypeParam_Lv2 = ["GRASS_TYPE_PARAM_ST"]
HitEffectSeParam = ["HIT_EFFECT_SE_PARAM_ST"]
HitEffectSfxConceptParam = ["HIT_EFFECT_SFX_CONCEPT_PARAM_ST"]
HitEffectSfxParam = ["HIT_EFFECT_SFX_PARAM_ST"]
HitMtrlParam = ["HIT_MTRL_PARAM_ST"]
HPEstusFlaskRecoveryParam = ["ESTUS_FLASK_RECOVERY_PARAM_ST"]
ItemLotParam_enemy = ["ITEMLOT_PARAM_ST"]
ItemLotParam_map = ["ITEMLOT_PARAM_ST"]
KeyAssignMenuItemParam = ["CS_KEY_ASSIGN_MENUITEM_PARAM"]
KeyAssignParam_TypeA = ["KEY_ASSIGN_PARAM_ST"]
KeyAssignParam_TypeB = ["KEY_ASSIGN_PARAM_ST"]
KeyAssignParam_TypeC = ["KEY_ASSIGN_PARAM_ST"]
KnockBackParam = ["KNOCKBACK_PARAM_ST"]
KnowledgeLoadScreenItemParam = ["KNOWLEDGE_LOADSCREEN_ITEM_PARAM_ST"]
LegacyDistantViewPartsReplaceParam = ["LEGACY_DISTANT_VIEW_PARTS_REPLACE_PARAM"]
LoadBalancerDrawDistScaleParam = ["LOAD_BALANCER_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerDrawDistScaleParam_ps4 = ["LOAD_BALANCER_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerDrawDistScaleParam_ps5 = ["LOAD_BALANCER_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerDrawDistScaleParam_xb1 = ["LOAD_BALANCER_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerDrawDistScaleParam_xb1x = ["LOAD_BALANCER_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerDrawDistScaleParam_xss = ["LOAD_BALANCER_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerDrawDistScaleParam_xsx = ["LOAD_BALANCER_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerNewDrawDistScaleParam_ps4 = ["LOAD_BALANCER_NEW_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerNewDrawDistScaleParam_ps5 = ["LOAD_BALANCER_NEW_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerNewDrawDistScaleParam_win64 = ["LOAD_BALANCER_NEW_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerNewDrawDistScaleParam_xb1 = ["LOAD_BALANCER_NEW_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerNewDrawDistScaleParam_xb1x = ["LOAD_BALANCER_NEW_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerNewDrawDistScaleParam_xss = ["LOAD_BALANCER_NEW_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerNewDrawDistScaleParam_xsx = ["LOAD_BALANCER_NEW_DRAW_DIST_SCALE_PARAM_ST"]
LoadBalancerParam = ["LOAD_BALANCER_PARAM_ST"]
LockCamParam = ["LOCK_CAM_PARAM_ST"]
Magic = ["MAGIC_PARAM_ST"]
MapDefaultInfoParam = ["MAP_DEFAULT_INFO_PARAM_ST"]
MapGdRegionDrawParam = ["MAP_GD_REGION_DRAW_PARAM"]
MapGdRegionInfoParam = ["MAP_GD_REGION_ID_PARAM_ST"]
MapGridCreateHeightLimitInfoParam = ["MAP_GRID_CREATE_HEIGHT_LIMIT_INFO_PARAM_ST"]
MapMimicryEstablishmentParam = ["MAP_MIMICRY_ESTABLISHMENT_PARAM_ST"]
MapNameTexParam = ["MAP_NAME_TEX_PARAM_ST"]
MapPieceTexParam = ["MAP_PIECE_TEX_PARAM_ST"]
MaterialExParam = ["MATERIAL_EX_PARAM_ST"]
MenuColorTableParam = ["MENU_PARAM_COLOR_TABLE_ST"]
MenuCommonParam = ["MENU_COMMON_PARAM_ST"]
MenuOffscrRendParam = ["MENU_OFFSCR_REND_PARAM_ST"]
MenuPropertyLayoutParam = ["MENUPROPERTY_LAYOUT"]
MenuPropertySpecParam = ["MENUPROPERTY_SPEC"]
MenuValueTableParam = ["MENU_VALUE_TABLE_SPEC"]
MimicryEstablishmentTexParam = ["MIMICRY_ESTABLISHMENT_TEX_PARAM_ST"]
MoveParam = ["MOVE_PARAM_ST"]
MPEstusFlaskRecoveryParam = ["ESTUS_FLASK_RECOVERY_PARAM_ST"]
MultiHPEstusFlaskBonusParam = ["MULTI_ESTUS_FLASK_BONUS_PARAM_ST"]
MultiMPEstusFlaskBonusParam = ["MULTI_ESTUS_FLASK_BONUS_PARAM_ST"]
MultiPlayCorrectionParam = ["MULTI_PLAY_CORRECTION_PARAM_ST"]
MultiSoulBonusRateParam = ["MULTI_SOUL_BONUS_RATE_PARAM_ST"]
NetworkAreaParam = ["NETWORK_AREA_PARAM_ST"]
NetworkMsgParam = ["NETWORK_MSG_PARAM_ST"]
NetworkParam = ["NETWORK_PARAM_ST"]
NpcAiActionParam = ["NPC_AI_ACTION_PARAM_ST"]
NpcAiBehaviorProbability = ["NPC_AI_BEHAVIOR_PROBABILITY_PARAM_ST"]
NpcParam = ["NPC_PARAM_ST"]
NpcThinkParam = ["NPC_THINK_PARAM_ST"]
ObjActParam = ["OBJ_ACT_PARAM_ST"]
PartsDrawParam = ["PARTS_DRAW_PARAM_ST"]
PhantomParam = ["PHANTOM_PARAM_ST"]
PlayerCommonParam = ["PLAYER_COMMON_PARAM_ST"]
PlayRegionParam = ["PLAY_REGION_PARAM_ST"]
PostureControlParam_Gender = ["POSTURE_CONTROL_PARAM_GENDER_ST"]
PostureControlParam_Pro = ["POSTURE_CONTROL_PARAM_PRO_ST"]
PostureControlParam_WepLeft = ["POSTURE_CONTROL_PARAM_WEP_LEFT_ST"]
PostureControlParam_WepRight = ["POSTURE_CONTROL_PARAM_WEP_RIGHT_ST"]
RandomAppearParam = ["RANDOM_APPEAR_PARAM_ST"]
ReinforceParamProtector = ["REINFORCE_PARAM_PROTECTOR_ST"]
ReinforceParamWeapon = ["REINFORCE_PARAM_WEAPON_ST"]
ResistCorrectParam = ["RESIST_CORRECT_PARAM_ST"]
RideParam = ["RIDE_PARAM_ST"]
RoleParam = ["ROLE_PARAM_ST"]
RollingObjLotParam = ["ROLLING_OBJ_LOT_PARAM_ST"]
RuntimeBoneControlParam = ["RUNTIME_BONE_CONTROL_PARAM_ST"]
SeActivationRangeParam = ["SE_ACTIVATION_RANGE_PARAM_ST"]
SeMaterialConvertParam = ["SE_MATERIAL_CONVERT_PARAM_ST"]
SfxBlockResShareParam = ["SFX_BLOCK_RES_SHARE_PARAM"]
ShopLineupParam = ["SHOP_LINEUP_PARAM"]
ShopLineupParam_Recipe = ["SHOP_LINEUP_PARAM"]
SignPuddleParam = ["SIGN_PUDDLE_PARAM_ST"]
SoundAssetSoundObjEnableDistParam = ["SOUND_ASSET_SOUND_OBJ_ENABLE_DIST_PARAM_ST"]
SoundAutoEnvSoundGroupParam = ["SOUND_AUTO_ENV_SOUND_GROUP_PARAM_ST"]
SoundAutoReverbEvaluationDistParam = ["SOUND_AUTO_REVERB_EVALUATION_DIST_PARAM_ST"]
SoundAutoReverbSelectParam = ["SOUND_AUTO_REVERB_SELECT_PARAM_ST"]
SoundChrPhysicsSeParam = ["SOUND_CHR_PHYSICS_SE_PARAM_ST"]
SoundCommonIngameParam = ["SOUND_COMMON_INGAME_PARAM_ST"]
SoundCutsceneParam = ["SOUND_CUTSCENE_PARAM_ST"]
SpeedtreeParam = ["SPEEDTREE_MODEL_PARAM_ST"]
SpEffectParam = ["SP_EFFECT_PARAM_ST"]
SpEffectSetParam = ["SP_EFFECT_SET_PARAM_ST"]
SpEffectVfxParam = ["SP_EFFECT_VFX_PARAM_ST"]
SwordArtsParam = ["SWORD_ARTS_PARAM_ST"]
TalkParam = ["TALK_PARAM_ST"]
ThrowDirectionSfxParam = ["THROW_DIRECTION_SFX_PARAM_ST"]
ThrowParam = ["THROW_PARAM_ST"]
ToughnessParam = ["TOUGHNESS_PARAM_ST"]
TutorialParam = ["TUTORIAL_PARAM_ST"]
WaypointParam = ["WAYPOINT_PARAM_ST"]
WeatherAssetCreateParam = ["WEATHER_ASSET_CREATE_PARAM_ST"]
WeatherAssetReplaceParam = ["WEATHER_ASSET_REPLACE_PARAM_ST"]
WeatherLotParam = ["WEATHER_LOT_PARAM_ST"]
WeatherLotTexParam = ["WEATHER_LOT_TEX_PARAM_ST"]
WeatherParam = ["WEATHER_PARAM_ST"]
WepAbsorpPosParam = ["WEP_ABSORP_POS_PARAM_ST"]
WetAspectParam = ["WET_ASPECT_PARAM_ST"]
WhiteSignCoolTimeParam = ["WHITE_SIGN_COOL_TIME_PARAM_ST"]
WorldMapLegacyConvParam = ["WORLD_MAP_LEGACY_CONV_PARAM_ST"]
WorldMapPieceParam = ["WORLD_MAP_PIECE_PARAM_ST"]
WorldMapPlaceNameParam = ["WORLD_MAP_PLACE_NAME_PARAM_ST"]
WorldMapPointParam = ["WORLD_MAP_POINT_PARAM_ST"]
WwiseValueToStrParam_BgmBossChrIdConv = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
WwiseValueToStrParam_EnvPlaceType = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
WwiseValueToStrParam_Switch_AttackStrength = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
WwiseValueToStrParam_Switch_AttackType = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
WwiseValueToStrParam_Switch_DamageAmount = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
WwiseValueToStrParam_Switch_DeffensiveMaterial = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
WwiseValueToStrParam_Switch_GrassHitType = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
WwiseValueToStrParam_Switch_HitStop = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
WwiseValueToStrParam_Switch_OffensiveMaterial = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
WwiseValueToStrParam_Switch_PlayerEquipmentBottoms = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
WwiseValueToStrParam_Switch_PlayerEquipmentTops = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
WwiseValueToStrParam_Switch_PlayerShoes = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
WwiseValueToStrParam_Switch_PlayerVoiceType = ["WWISE_VALUE_TO_STR_CONVERT_PARAM_ST"]
ACTIONBUTTON_PARAM_ST = []
AI_ANIM_TBL_PARAM = []
AI_ATTACK_PARAM_ST = []
AI_ODDS_PARAM = []
AI_SOUND_PARAM_ST = []
AI_STANDARD_INFO_BANK = []
ASSET_GEOMETORY_PARAM_ST = []
ASSET_MATERIAL_SFX_PARAM_ST = []
ASSET_MODEL_SFX_PARAM_ST = []
ATK_PARAM_ST = []
ATTACK_ELEMENT_CORRECT_PARAM_ST = []
AUTO_CREATE_ENV_SOUND_PARAM_ST = []
BASECHR_SELECT_MENU_PARAM_ST = []
BEHAVIOR_PARAM_ST = []
BONFIRE_WARP_PARAM_ST = []
BONFIRE_WARP_SUB_CATEGORY_PARAM_ST = []
BONFIRE_WARP_TAB_PARAM_ST = []
BUDDY_PARAM_ST = []
BUDDY_STONE_PARAM_ST = []
BUDGET_PARAM_ST = []
BULLET_CREATE_LIMIT_PARAM_ST = []
BULLET_PARAM_ST = []
CACL_CORRECT_GRAPH_ST = []
CAMERA_FADE_PARAM_ST = []
CEREMONY_PARAM_ST = []
CHARACTER_INIT_PARAM = []
CHARMAKEMENU_LISTITEM_PARAM_ST = []
CHARMAKEMENUTOP_PARAM_ST = []
CHR_ACTIVATE_CONDITION_PARAM_ST = []
CHR_MODEL_PARAM_ST = []
CLEAR_COUNT_CORRECT_PARAM_ST = []
COMMON_SYSTEM_PARAM_ST = []
COOL_TIME_PARAM_ST = []
CUTSCENE_GPARAM_TIME_PARAM_ST = []
CUTSCENE_GPARAM_WEATHER_PARAM_ST = []
CUTSCENE_MAP_ID_PARAM_ST = []
CUTSCENE_TEXTURE_LOAD_PARAM_ST = []
CUTSCENE_TIMEZONE_CONVERT_PARAM_ST = []
CUTSCENE_WEATHER_OVERRIDE_GPARAM_ID_CONVERT_PARAM_ST = []
DECAL_PARAM_ST = []
DEFAULT_KEY_ASSIGN = []
DIRECTION_CAMERA_PARAM_ST = []
ENEMY_COMMON_PARAM_ST = []
ENEMY_STANDARD_INFO_BANK = []
ENV_OBJ_LOT_PARAM_ST = []
EQUIP_MTRL_SET_PARAM_ST = []
EQUIP_PARAM_ACCESSORY_ST = []
EQUIP_PARAM_CUSTOM_WEAPON_ST = []
EQUIP_PARAM_GEM_ST = []
EQUIP_PARAM_GOODS_ST = []
EQUIP_PARAM_PROTECTOR_ST = []
EQUIP_PARAM_WEAPON_ST = []
ESTUS_FLASK_RECOVERY_PARAM_ST = []
EVENT_FLAG_USAGE_PARAM_ST = []
FACE_PARAM_ST = []
FACE_RANGE_PARAM_ST = []
FE_TEXT_EFFECT_PARAM_ST = []
FINAL_DAMAGE_RATE_PARAM_ST = []
FOOT_SFX_PARAM_ST = []
GAME_AREA_PARAM_ST = []
GAME_INFO_PARAM = []
GAME_SYSTEM_COMMON_PARAM_ST = []
CS_AA_QUALITY_DETAIL = []
CS_DECAL_QUALITY_DETAIL = []
CS_DOF_QUALITY_DETAIL = []
CS_EFFECT_QUALITY_DETAIL = []
CS_LIGHTING_QUALITY_DETAIL = []
CS_MOTION_BLUR_QUALITY_DETAIL = []
CS_REFLECTION_QUALITY_DETAIL = []
CS_SHADER_QUALITY_DETAIL = []
CS_SHADOW_QUALITY_DETAIL = []
CS_SSAO_QUALITY_DETAIL = []
CS_TEXTURE_FILTER_QUALITY_DETAIL = []
CS_VOLUMETRIC_EFFECT_QUALITY_DETAIL = []
CS_WATER_QUALITY_DETAIL = []
GESTURE_PARAM_ST = []
GPARAM_GRID_REGION_INFO_PARAM_ST = []
GPARAM_REF_SETTINGS_PARAM_ST = []
GRAPHICS_COMMON_PARAM_ST = []
CS_GRAPHICS_CONFIG_PARAM_ST = []
GRASS_LOD_RANGE_PARAM_ST = []
GRASS_MAP_SETTINGS_PARAM_ST = []
GRASS_TYPE_PARAM_ST = []
HIT_EFFECT_SE_PARAM_ST = []
HIT_EFFECT_SFX_CONCEPT_PARAM_ST = []
HIT_EFFECT_SFX_PARAM_ST = []
HIT_MTRL_PARAM_ST = []
ITEMLOT_PARAM_ST = []
CS_KEY_ASSIGN_MENUITEM_PARAM = []
KEY_ASSIGN_PARAM_ST = []
KNOCKBACK_PARAM_ST = []
KNOWLEDGE_LOADSCREEN_ITEM_PARAM_ST = []
LEGACY_DISTANT_VIEW_PARTS_REPLACE_PARAM = []
LOAD_BALANCER_DRAW_DIST_SCALE_PARAM_ST = []
LOAD_BALANCER_NEW_DRAW_DIST_SCALE_PARAM_ST = []
LOAD_BALANCER_PARAM_ST = []
LOCK_CAM_PARAM_ST = []
MAGIC_PARAM_ST = []
MAP_DEFAULT_INFO_PARAM_ST = []
MAP_GD_REGION_DRAW_PARAM = []
MAP_GD_REGION_ID_PARAM_ST = []
MAP_GRID_CREATE_HEIGHT_LIMIT_INFO_PARAM_ST = []
MAP_MIMICRY_ESTABLISHMENT_PARAM_ST = []
MAP_NAME_TEX_PARAM_ST = []
MAP_PIECE_TEX_PARAM_ST = []
MATERIAL_EX_PARAM_ST = []
MENU_COMMON_PARAM_ST = []
MENU_OFFSCR_REND_PARAM_ST = []
MENU_PARAM_COLOR_TABLE_ST = []
MENUPROPERTY_LAYOUT = []
MENUPROPERTY_SPEC = []
MENU_VALUE_TABLE_SPEC = []
MIMICRY_ESTABLISHMENT_TEX_PARAM_ST = []
MISSILE_PARAM_ST = []
MODEL_SFX_PARAM_ST = []
MOVE_PARAM_ST = []
MULTI_ESTUS_FLASK_BONUS_PARAM_ST = []
MULTI_PLAY_CORRECTION_PARAM_ST = []
MULTI_SOUL_BONUS_RATE_PARAM_ST = []
NETWORK_AREA_PARAM_ST = []
NETWORK_MSG_PARAM_ST = []
NETWORK_PARAM_ST = []
NPC_AI_ACTION_PARAM_ST = []
NPC_AI_BEHAVIOR_PROBABILITY_PARAM_ST = []
NPC_PARAM_ST = []
NPC_THINK_PARAM_ST = []
OBJ_ACT_PARAM_ST = []
OBJECT_MATERIAL_SFX_PARAM_ST = []
OBJECT_PARAM_ST = []
PARTS_DRAW_PARAM_ST = []
PERFORMANCE_CHECK_PARAM = []
PHANTOM_PARAM_ST = []
PLAYER_COMMON_PARAM_ST = []
PLAY_REGION_PARAM_ST = []
POSTURE_CONTROL_PARAM_GENDER_ST = []
POSTURE_CONTROL_PARAM_PRO_ST = []
POSTURE_CONTROL_PARAM_WEP_LEFT_ST = []
POSTURE_CONTROL_PARAM_WEP_RIGHT_ST = []
RANDOM_APPEAR_EDIT_PARAM_ST = []
RANDOM_APPEAR_PARAM_ST = []
REINFORCE_PARAM_PROTECTOR_ST = []
REINFORCE_PARAM_WEAPON_ST = []
RESIST_CORRECT_PARAM_ST = []
REVERB_AUX_SEND_BUS_PARAM_ST = []
RIDE_PARAM_ST = []
ROLE_PARAM_ST = []
ROLLING_OBJ_LOT_PARAM_ST = []
RUNTIME_BONE_CONTROL_PARAM_ST = []
SE_ACTIVATION_RANGE_PARAM_ST = []
SE_MATERIAL_CONVERT_PARAM_ST = []
SFX_BLOCK_RES_SHARE_PARAM = []
SHOP_LINEUP_PARAM = []
SIGN_PUDDLE_PARAM_ST = []
SOUND_ASSET_SOUND_OBJ_ENABLE_DIST_PARAM_ST = []
SOUND_AUTO_ENV_SOUND_GROUP_PARAM_ST = []
SOUND_AUTO_REVERB_EVALUATION_DIST_PARAM_ST = []
SOUND_AUTO_REVERB_SELECT_PARAM_ST = []
SOUND_CHR_PHYSICS_SE_PARAM_ST = []
SOUND_COMMON_INGAME_PARAM_ST = []
SOUND_COMMON_SYSTEM_PARAM_ST = []
SOUND_CUTSCENE_PARAM_ST = []
SPEEDTREE_MODEL_PARAM_ST = []
SP_EFFECT_PARAM_ST = []
SP_EFFECT_SET_PARAM_ST = []
SP_EFFECT_VFX_PARAM_ST = []
SWORD_ARTS_PARAM_ST = []
TALK_PARAM_ST = []
THROW_DIRECTION_SFX_PARAM_ST = []
THROW_PARAM_ST = []
TOUGHNESS_PARAM_ST = []
TUTORIAL_PARAM_ST = []
WAYPOINT_PARAM_ST = []
WEATHER_ASSET_CREATE_PARAM_ST = []
WEATHER_ASSET_REPLACE_PARAM_ST = []
WEATHER_LOT_PARAM_ST = []
WEATHER_LOT_TEX_PARAM_ST = []
WEATHER_PARAM_ST = []
WEP_ABSORP_POS_PARAM_ST = []
WET_ASPECT_PARAM_ST = []
WHITE_SIGN_COOL_TIME_PARAM_ST = []
WORLD_MAP_LEGACY_CONV_PARAM_ST = []
WORLD_MAP_PIECE_PARAM_ST = []
WORLD_MAP_PLACE_NAME_PARAM_ST = []
WORLD_MAP_POINT_PARAM_ST = []
WWISE_VALUE_TO_STR_CONVERT_PARAM_ST = []
